# app/Models/Componente.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Componente extends Model
+{
+    protected $fillable = [
+        'nombre',
+        'descripcion',
+        'activo',
+        'imagen',
+    ];
+}
